--- a/Automotora3/Views/Correos/Details.cshtml
+++ b/Automotora3/Views/Correos/Details.cshtml
@@ -30,6 +30,5 @@
     </dl>
 </div>
 <div>
- 
-    <a asp-action="Index">Volver</a>
+    <a class="btn btn-warning" asp-area="" asp-controller="Correos" asp-action="Index">Volver</a>
 </div>
