--- a/Automotora3/Views/Correos/Create.cshtml
+++ b/Automotora3/Views/Correos/Create.cshtml
@@ -4,9 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>Correo</h4>
+<h4>Enviar Correo</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -35,7 +33,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Volver</a>
+    <a class="btn btn-warning" asp-area="" asp-controller="Home" asp-action="Index">Volver</a>
 </div>
 
 @section Scripts {
