--- a/Automotora3/Views/Home/Admin.cshtml
+++ b/Automotora3/Views/Home/Admin.cshtml
@@ -48,7 +48,7 @@
             <div class="card text-center" style="width: 18rem;">
                 <div class="card-body">
                     <h5 class="card-title">Correo</h5>
-                    <p class="card-text">Registre, modifique o elimine a los nuevos clientes.</p>
+                    <p class="card-text">Revise los correos que los usuarios envian.</p>
                     <a class="btn btn-warning" asp-area="" asp-controller="Correos" asp-action="Index">Ver Correo</a>
                 </div>
             </div>
